pamc/src/tests/sample_code/should_fail/multi_file/bind/use_priv/src/mod.ph
mod foo;
use foo.Foo;
